# emoji-palette

./: .gitignore  Cargo.toml  readme.org
emoji_scraper/: emoji_scraper.py
src/: drawing.rs  emoji_store.rs  main.rs
